Some changes in methods